--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,17 @@ body {
   font-family: 'Roboto', sans-serif;
   font-family: 'Rufina', serif; }
 
+.dim {
+  width: 100%;
+  height: 100%;
+  z-index: -600;
+  display: none;
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: rgba(223, 39, 39, 0.9); }
+
 .header-flex-cont {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -321,7 +332,7 @@ main .sidebar-block-1 {
         margin: -17px 0 0 31px; }
   main .sidebar-block-1 .slider:hover .slider-full {
     display: block;
-    z-index: 1; }
+    z-index: 100; }
   main .sidebar-block-1 .slider-full {
     display: none;
     margin-top: -140px;
@@ -1585,13 +1596,21 @@ main .text-realtor {
     height: 63.08px;
     margin-left: 150px; }
   header nav ul {
-    margin-left: -15%; } }
+    margin-left: -15%; }
+  main {
+    margin-left: -260px; } }
 
 @media screen and (max-width: 1400px) {
   header .header-flex-cont .header-flex-box:first-child img {
     width: 83px;
     height: 63.08px;
-    margin-left: 70px; } }
+    margin-left: 70px; }
+  header nav ul li a {
+    padding-bottom: 14px; }
+  .place-cont {
+    margin: 495px 0 0 305px !important; }
+  .feedback {
+    margin: 55px 0 0 305px !important; } }
 
 @media screen and (max-width: 1330px) {
   header .header-flex-cont .header-flex-box:first-child img {
@@ -1614,28 +1633,54 @@ main .text-realtor {
       header .header-flex-cont .header-flex-box:nth-child(3) input[type=text] {
         width: 460px; }
       header .header-flex-cont .header-flex-box:nth-child(3) button {
-        margin-top: -4px; } }
+        margin-top: -4px; }
+  header nav ul li a {
+    padding-bottom: 11px; } }
 
-@media screen and (max-width: 610px) {
-  header .header-flex-cont .header-flex-box:first-child {
-    margin-left: 20%; }
-  header .header-flex-cont .header-flex-box:nth-child(3) {
-    width: 480px;
-    margin: 0 5px 0 5px; }
-    header .header-flex-cont .header-flex-box:nth-child(3) input[type=text] {
-      width: 320px; }
-    header .header-flex-cont .header-flex-box:nth-child(3) button {
-      margin-top: -4px; }
-  header .header-flex-cont .header-flex-box:nth-child(4) {
-    margin: 5% 0 0 23%; }
-  header .header-flex-cont .header-flex-box:last-child {
-    margin: 5% 0 0 1%; }
-  nav {
+@media screen and (max-width: 1112px) {
+  header .header-flex-cont {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    width: 98%;
-    height: 100%;
-    margin: 30% 10px 0 5px; }
-    nav ul li {
-      display: inline-block; } }
+    height: 100px;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap; }
+    header .header-flex-cont .header-flex-box:nth-child(3) {
+      width: 480px; }
+      header .header-flex-cont .header-flex-box:nth-child(3) input[type=text] {
+        width: 360px; }
+      header .header-flex-cont .header-flex-box:nth-child(3) button {
+        margin-top: -4px; }
+  header nav ul li a {
+    padding-bottom: 13px; } }
+
+@media screen and (max-width: 980px) {
+  header .header-flex-cont {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    height: 100px;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap; }
+    header .header-flex-cont .header-flex-box:first-child {
+      margin-left: 25%; }
+    header .header-flex-cont .header-flex-box:nth-child(3) {
+      width: 620px;
+      margin: 2% 5% 3% 5%; }
+      header .header-flex-cont .header-flex-box:nth-child(3) input[type=text] {
+        width: 460px; }
+      header .header-flex-cont .header-flex-box:nth-child(3) button {
+        margin-top: -4px; }
+    header .header-flex-cont .header-flex-box:nth-child(4) {
+      margin: 0 0 0 25%; }
+    header .header-flex-cont .header-flex-box:last-child {
+      margin: 0 0 0 1%; }
+  header nav {
+    height: 50px;
+    margin-top: 150px;
+    width: 100%; }
+    header nav ul li a {
+      padding-bottom: 16px; }
+  .place-cont {
+    width: 60%;
+    margin: 495px 0 0 273px !important; } }
