--- a/css/style.scss
+++ b/css/style.scss
@@ -5,6 +5,18 @@ body {
     serif;
 }
 
+.dim {
+  width: 100%;
+  height: 100%;
+  z-index: -600;
+  display: none;
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: rgba(223, 39, 39, 0.9);
+}
+
 .header-flex-cont {
   display: flex;
   height: 100px;
@@ -368,7 +380,7 @@ main {
 
     .slider:hover .slider-full {
       display: block;
-      z-index: 1;
+      z-index: 100;
     }
 
     .slider-full {
@@ -2138,6 +2150,7 @@ main {
       position: absolute;
     }
   }
+
 }
 
 //       .tabs ul li {
@@ -2319,6 +2332,10 @@ main {
       margin-left: -15%;
     }
   }
+
+  main {
+    margin-left: -260px;
+  }
 }
 
 @media screen and (max-width: 1400px) {
@@ -2332,7 +2349,24 @@ main {
         margin-left: 70px;
       }
     }
+
+    nav ul li a {
+      padding-bottom: 14px;
+
+    }
   }
+
+  .place-cont {
+    margin: 495px 0 0 305px !important;
+  }
+
+  .feedback {
+    margin: 55px 0 0 305px !important;
+
+  }
+
+
+
 }
 
 @media screen and (max-width: 1330px) {
@@ -2376,91 +2410,29 @@ main {
         }
       }
     }
+
+    nav ul li a {
+      padding-bottom: 11px;
+
+    }
   }
+
+
 }
 
-// @media screen and (max-width: 1112px) {
+@media screen and (max-width: 1112px) {
 
-//   header {
-//     .header-flex-cont {
-//       display: flex;
-//       height: 100px;
-//       flex-wrap: wrap;
-
-//       .header-flex-box:nth-child(3) {
-//         width: 480px;
-
-//         input[type=text] {
-//           width: 360px;
-
-//         }
-
-//         button {
-
-//           margin-top: -4px;
-
-//         }
-//       }
-//     }
-//   }
-// }
-
-// @media screen and (max-width: 980px) {
-
-//   header {
-//     .header-flex-cont {
-//       display: flex;
-//       height: 100px;
-//       flex-wrap: wrap;
-
-//       .header-flex-box:first-child {
-//         margin-left: 25%;
-//       }
-
-//       .header-flex-box:nth-child(3) {
-//         width: 620px;
-//         margin: 2% 5% 3% 5%;
-
-//         input[type=text] {
-//           width: 460px;
-
-//         }
-
-//         button {
-
-//           margin-top: -4px;
-
-//         }
-
-
-//       }
-
-//       .header-flex-box:nth-child(4) {
-
-//         margin: 0 0 0 25%;
-//       }
-
-//       .header-flex-box:last-child {
-//         margin: 0 0 0 1%;
-
-//       }
-//     }
-//   }
-// }
-
-@media screen and (max-width: 610px) {
   header {
     .header-flex-cont {
-      .header-flex-box:first-child {
-        margin-left: 20%;
-      }
+      display: flex;
+      height: 100px;
+      flex-wrap: wrap;
 
       .header-flex-box:nth-child(3) {
         width: 480px;
-        margin: 0 5px 0 5px;
 
         input[type=text] {
-          width: 320px;
+          width: 360px;
 
         }
 
@@ -2470,28 +2442,118 @@ main {
 
         }
       }
-
-      .header-flex-box:nth-child(4) {
-        margin: 5% 0 0 23%;
-      }
-
-      .header-flex-box:last-child {
-        margin: 5% 0 0 1%;
-
-      }
-
-
     }
-  }
 
-  nav {
-    display: flex;
-    width: 98%;
-    height: 100%;
-    margin: 30% 10px 0 5px;
+    nav ul li a {
+      padding-bottom: 13px;
 
-    ul li {
-      display: inline-block;
     }
   }
 }
+
+@media screen and (max-width: 980px) {
+
+  header {
+    .header-flex-cont {
+      display: flex;
+      height: 100px;
+      flex-wrap: wrap;
+
+      .header-flex-box:first-child {
+        margin-left: 25%;
+      }
+
+      .header-flex-box:nth-child(3) {
+        width: 620px;
+        margin: 2% 5% 3% 5%;
+
+        input[type=text] {
+          width: 460px;
+
+        }
+
+        button {
+
+          margin-top: -4px;
+
+        }
+
+
+      }
+
+      .header-flex-box:nth-child(4) {
+
+        margin: 0 0 0 25%;
+      }
+
+      .header-flex-box:last-child {
+        margin: 0 0 0 1%;
+
+      }
+    }
+
+    nav {
+      height: 50px;
+      margin-top: 150px;
+      width: 100%;
+
+      ul li a {
+        padding-bottom: 16px;
+
+      }
+    }
+  }
+
+  .place-cont {
+    width: 60%;
+    margin: 495px 0 0 273px !important;
+  }
+}
+
+// @media screen and (max-width: 610px) {
+//   header {
+//     .header-flex-cont {
+//       .header-flex-box:first-child {
+//         margin-left: 20%;
+//       }
+
+//       .header-flex-box:nth-child(3) {
+//         width: 480px;
+//         margin: 0 5px 0 5px;
+
+//         input[type=text] {
+//           width: 320px;
+
+//         }
+
+//         button {
+
+//           margin-top: -4px;
+
+//         }
+//       }
+
+//       .header-flex-box:nth-child(4) {
+//         margin: 5% 0 0 23%;
+//       }
+
+//       .header-flex-box:last-child {
+//         margin: 5% 0 0 1%;
+
+//       }
+
+
+//     }
+//   }
+
+//   nav {
+//     display: flex;
+//     width: 98%;
+//     height: 100%;
+//     margin: 30% 10px 0 5px;
+
+//     ul li {
+//       display: inline-block;
+//     }
+//   }
+// }
